[tool.poetry]
name = "problem-solving"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "problem_solving"}]

[tool.poetry.dependencies]
python = "^3.9"
cleo = "^0.8.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}
pylint = {extras = ["quotes"], version = "^2.15.5"}
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

