[tool.poetry]
name = "lets-solve-problems"
version = "0.1.0"
description = ""
authors = ["Vetrichelvan <pythonhub.py@gmail.com>"]
readme = "README.md"
packages = [{ include = "lets_solve_problems" }]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pylint = { extras = ["quotes"], version = "^2.17.1" }
black = { extras = ["d"], version = "^22.10.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
